--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "1.0.0",
   "description": "Node server of the Mini Project - Team XYZ",
   "main": "server.js",
+  "engines": {
+    "node": ">=6.x.x",
+    "npm": ">=3.9.5"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
-    "client": "cd ../client && npm start",
+    "start": "node server.js",
+    "devStart": "nodemon server.js",
+    "client": "cd ../client && npm devStart",
     "dev": "concurrently -n 'server,client' -c 'green,red' \"nodemon server.js\" \"npm run client\""
   },
   "author": "ZRS Mahida",
