--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": ">=3.9.5"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "node server.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "ZRS Mahida",
