--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   },
   "scripts": {
     "start": "node server.js",
-    "build": "cd client && npm run build",
-    "install-client": "cd client && npm install",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run install-client && npm run build"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "ZRS Mahida",
   "license": "ISC",
