--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "npm": ">=3.9.5"
   },
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "devStart": "nodemon server.js",
+    "client": "cd ../client && npm start",
+    "dev": "concurrently -n 'server,client' -c 'green,red' \"nodemon server.js\" \"npm run client\""
   },
   "author": "ZRS Mahida",
   "license": "ISC",
